--- a/ImageEditor/app/src/main/res/layout/activity_editor.xml
+++ b/ImageEditor/app/src/main/res/layout/activity_editor.xml
@@ -29,6 +29,12 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true">
+        <ImageView
+            android:id="@+id/imgView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"></ImageView>
+
 
 
         <ImageButton
