--- a/ImageEditor/app/src/main/res/layout/activity_edit_popup.xml
+++ b/ImageEditor/app/src/main/res/layout/activity_edit_popup.xml
@@ -10,7 +10,8 @@
 
         <TabHost
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:id="@+id/TabHost">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,6 +34,12 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <TextView
+                            android:text="this is actually  the Filters page."
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView" />
+
                         <GridView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -47,6 +54,11 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <TextView
+                            android:text="This is the tools page!"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView2" />
                     </LinearLayout>
 
                 </FrameLayout>
