--- a/ImageEditor/app/src/main/res/layout/activity_editor.xml
+++ b/ImageEditor/app/src/main/res/layout/activity_editor.xml
@@ -1,24 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.mihai.imageeditor.MainActivity">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:orientation="vertical"
+tools:context="com.example.mihai.imageeditor.MainActivity">
 
 
-    <Button
-        android:id="@+id/buttonSaveImage"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:text="Save" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <!--<include-->
-    <!--android:id="@+id/toolbar"-->
-    <!--layout="@layout/tool_bar"-->
+        <Button
+            android:id="@+id/buttonSaveImage"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:text="Save" />
 
-    <!--&gt;</include>-->
+        <Button
+            android:id="@+id/buttonInvertColors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:onClick="invertImage"
+            android:text="Invert Colors" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
+
+
+
+<!--<include-->
+<!--android:id="@+id/toolbar"-->
+<!--layout="@layout/tool_bar"-->
+
+<!--&gt;</include>-->
+
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -28,21 +53,27 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true">
 
-        <ImageView
-            android:id="@+id/imgView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-        </ImageView>
-
         <ImageButton
             android:id="@+id/ImageButton"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_gravity="right|bottom"
             android:layout_margin="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/circle"
             android:onClick="editclick"
             android:src="@drawable/ic_create_black_24dp" />
+
+        <ImageView
+            android:id="@+id/imgView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"></ImageView>
+
+
+
     </FrameLayout>
+
+
 </LinearLayout>
